--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
 	],
     "require": {
         "php": ">=7.1.3",
-        "symfony/http-foundation": "4.4.*",
-        "symfony/http-client": "4.4.*",
-        "symfony/dependency-injection": "4.4.*",
-        "symfony/config": "4.4.*",
-        "symfony/security": "4.4.*",
-        "symfony/http-kernel": "4.4.*",
+        "symfony/http-foundation": "4.*|5.*",
+        "symfony/http-client": "4.*|5.*",
+        "symfony/dependency-injection": "4.*|5.*",
+        "symfony/config": "4.*|5.*",
+        "symfony/security": "4.*|5.*",
+        "symfony/http-kernel": "4.*|5.*",
         "firebase/php-jwt": "^6.4"
     },
     "autoload": {
