--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/dependency-injection": "4.*|5.*|6.*",
         "symfony/config": "4.*|5.*|6.*",
         "symfony/http-kernel": "4.*|5.*|6.*",
+        "symfony/filesystem": "4.*|5.*|6.*",
         "firebase/php-jwt": "^6.4",
         "symfony/security-core": "*"
     },
