--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
         "symfony/config": "4.*|5.*|6.*",
         "symfony/http-kernel": "4.*|5.*|6.*",
         "symfony/filesystem": "4.*|5.*|6.*",
+        "symfony/routing": "4.*|5.*|6.*",
+        "symfony/framework-bundle": "4.*|5.*|6.*",
         "firebase/php-jwt": "^6.4",
         "symfony/security-core": "*"
     },
