--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
 		}
 	],
     "require": {
-        "php": ">=7.1.3 || 8.*",
+        "php": ">=7.1.3",
         "symfony/http-foundation": "4.*|5.*|6.*",
         "symfony/http-client": "4.*|5.*|6.*",
         "symfony/dependency-injection": "4.*|5.*|6.*",
