--- a/composer.json
+++ b/composer.json
@@ -2,35 +2,34 @@
     "name": "akyos/puppeteer-sdk",
     "type": "sdk",
     "description": "Symfony Puppeteer Akyos SDK",
-    "keywords": ["sdk", "puppeteer"],
-    "homepage": "https://symfony.com",
-    "license": "proprietary",
+    "license": "MIT",
     "authors": [
-		{
-			"name": "Lilian Carneau",
-			"email": "lilian@akyos.com"
-		},
-		{
-			"name": "Johan JOULKVA",
-			"email": "johan@akyos.com"
-		},
-		{
-			"name": "Thomas Sebert",
-			"email": "thomas@akyos.com"
-		}
-	],
+	{
+		"name": "Lilian Carneau",
+		"email": "lilian@akyos.com"
+	},
+	{
+		"name": "Thomas Sebert",
+		"email": "thomas@akyos.com"
+	},
+	{
+		"name": "Akyos Communication",
+		"homepage": "https://akyos.com"
+	}
+    ],
+    "keywords": ["sdk", "puppeteer"],
     "require": {
-        "php": ">=7.1.3",
-        "symfony/http-foundation": "4.*|5.*|6.*",
-        "symfony/http-client": "4.*|5.*|6.*",
-        "symfony/dependency-injection": "4.*|5.*|6.*",
-        "symfony/config": "4.*|5.*|6.*",
-        "symfony/http-kernel": "4.*|5.*|6.*",
-        "symfony/filesystem": "4.*|5.*|6.*",
-        "symfony/routing": "4.*|5.*|6.*",
-        "symfony/framework-bundle": "4.*|5.*|6.*",
-        "firebase/php-jwt": "^6.4",
-        "symfony/security-core": "*"
+	"php": ">=7.1.3",
+	"symfony/http-foundation": "4.*|5.*|6.*",
+	"symfony/http-client": "4.*|5.*|6.*",
+	"symfony/dependency-injection": "4.*|5.*|6.*",
+	"symfony/config": "4.*|5.*|6.*",
+	"symfony/http-kernel": "4.*|5.*|6.*",
+	"symfony/filesystem": "4.*|5.*|6.*",
+	"symfony/routing": "4.*|5.*|6.*",
+	"symfony/framework-bundle": "4.*|5.*|6.*",
+	"firebase/php-jwt": "^6.4",
+	"symfony/security-core": "*"
     },
     "autoload": {
         "psr-4": { "Akyos\\PuppeteerSDK\\": "" },
