--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,14 @@
     "keywords": ["sdk", "puppeteer"],
     "require": {
 	"php": ">=7.1.3",
-	"symfony/http-foundation": "4.*|5.*|6.*",
-	"symfony/http-client": "4.*|5.*|6.*",
-	"symfony/dependency-injection": "4.*|5.*|6.*",
-	"symfony/config": "4.*|5.*|6.*",
-	"symfony/http-kernel": "4.*|5.*|6.*",
-	"symfony/filesystem": "4.*|5.*|6.*",
-	"symfony/routing": "4.*|5.*|6.*",
-	"symfony/framework-bundle": "4.*|5.*|6.*",
+	"symfony/http-foundation": "4.*|5.*|6.*|7.*",
+	"symfony/http-client": "4.*|5.*|6.*|7.*",
+	"symfony/dependency-injection": "4.*|5.*|6.*|7.*",
+	"symfony/config": "4.*|5.*|6.*|7.*",
+	"symfony/http-kernel": "4.*|5.*|6.*|7.*",
+	"symfony/filesystem": "4.*|5.*|6.*|7.*",
+	"symfony/routing": "4.*|5.*|6.*|7.*",
+	"symfony/framework-bundle": "4.*|5.*|6.*|7.*",
 	"firebase/php-jwt": "^6.4",
 	"symfony/security-core": "*"
     },
